fix go to top mobile btn z-index, round scroll, in searchOnSites check if next and prev chars not a letter

--- a/src/index.css
+++ b/src/index.css
@@ -44,4 +44,5 @@ input:-webkit-autofill:active {
 }
 ::-webkit-scrollbar-thumb {
   background: rgb(250, 204, 21);
+  border-radius: 0.3rem;
 }
